<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@android:color/white"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content">

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_gravity="left"
                android:layout_weight="1"
                tools:text="Title"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:id="@+id/view_holder_working_experience_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/placeholder_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/view_holder_working_experience_from"
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    tools:text="01/01/2010"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray"
                    android:layout_marginRight="4dp"
                    android:text="@string/placeholder_until"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/view_holder_working_experience_until"
                    android:textSize="14sp"
                    android:textColor="@android:color/darker_gray"
                    tools:text="01/09/2010"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/gain_exp_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/view_holder_working_experience_gain_exp"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            tools:text="@string/lorem_ipsum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:text="@string/description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/view_holder_working_experience_description"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            tools:text="@string/lorem_ipsum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.v7.widget.CardView>